--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
               <!-- Project 1 -->
               <div id="maringo" class="project-details">
                 <div class="project-image animate-slide-in">
-                  <img class="placeholder-image" src="portfolio.png" alt="">
+                  <img class="placeholder-image" src="portfolio.png" alt="portfolio image" style="border: 2px solid black;">
                 </div>
                 
                 <div class="project-info animate-slide-in" style="animation-delay: 0.2s;">
