--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
                     </div>
                   </div>
                   
-                  <a href="maringo-project.html" class="btn-primary">View Project Details</a>
+                  <a href="https://github.com/Goddy-2024/MainPortfolio" class="btn-primary">View Project Details</a>
                 </div>
               </div>
 
