--- a/projects.html
+++ b/projects.html
@@ -103,10 +103,10 @@
                 </div>
               </div>
 
-              <!-- Project 3 -->
+              <!-- Project 2 -->
               <div id="ledger" class="project-details">
                 <div class="project-image animate-slide-in">
-                  <div class="placeholder-image">Financial Digital Ledger Screenshot</div>
+                  <div class="placeholder-image"></div>
                 </div>
                 
                 <div class="project-info animate-slide-in" style="animation-delay: 0.2s;">
@@ -126,7 +126,7 @@
                     </div>
                   </div>
                   
-                  <a href="#" class="btn-primary">View Live Project</a>
+                  <a href="https://github.com/Goddy-2024" class="btn-primary">View Live Project</a>
                 </div>
               </div>
             </div>
