--- a/about.html
+++ b/about.html
@@ -107,6 +107,9 @@
                 
                 <div class="about-buttons">
                   <a href="projects.html" class="btn-primary">View My Work</a>
+                  <a href="myCv.docx" download="myCv.docx">
+                  <button><i class="fa fa-download"></i> Download CV</button>
+                  </a>
                   <a href="contact.html" class="btn-secondary">Contact Me</a>
                 </div>
               </div>
