--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 
                 <div class="cta-button">
                   <a href="contact.html" class="btn-primary">HIRE ME</a>
+                  <a href="myCv.docx" download="myCv.docx">
+                  <button><i class="fa fa-download"></i> Download CV</button>
+                  </a>
                 </div>
               </div>
               
